src/main/java/com/example/aboutme/_core/error/exception/Exception500.java
package com.example.aboutme._core.error.exception;

public class Exception500 extends RuntimeException {

    public Exception500(String msg) {
        super(msg);
    }
}
